--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,49 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Titillium+Web');
 body
 {
 	margin: 0px;
+	/*overflow-y: hidden;*/
+	
 }
 .row1
 {
-	width: 100%;
-	background-color: rgb(0,0,0);
-	display: flex;
-	padding-left: 17.5%;
+	background-color: rgb(3, 8, 39);
+    display: flex;
+    box-shadow: 0px 0px 12px;
+
 }
 a
 {
-	text-decoration: none;
-	color: #fbfbfb;
-	display: block;
-	padding: 10px 10px 5px 7.5px;
-	text-align: center;
-	font-size: 20px;
+	font-family: 'Merriweather', serif;
+    text-shadow: 1px 1px 5px black;
+    text-decoration: none;
+    color: #fbfbfb;
+    display: block;
+    padding: 2px 0px 2px 5px;
+    text-align: center;
+    font-size: 8px;
 }
 div.row2
 {
-	width: 100%;
-	display: flex;
-	height: 300px;
-	flex-wrap: nowrap;
+    width: 100%;
+    display: flex;
+    height: 125px;
+    background-color: rgba(0,0,0,.05);
+    box-shadow: 0px 0px 6px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 div.logoIEEE
 {
-	border-bottom-right-radius: 270px;
-	background-color: rgba(0,0,0,.05);
+	/*border-bottom-right-radius: 270px;
+	background-color: rgba(0,0,0,.05);*/
 	justify-content: flex-start;
 	width: 17.5%;
 }
 .logoIEEE img
 {
 	margin-left: 20px;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 div.gallery
 {
@@ -44,18 +52,120 @@ div.gallery
 }
 h1
 {
-	margin: 0px;
+    margin: 0px;
+    font-size: 15px;
+    color: #96300b;
+   font-family: 'Titillium Web', sans-serif;
+   text-shadow: 0px 0px 1px black;
 }
 div.logoSJB
 {
-	border-bottom-left-radius: 270px;
-	background-color: rgba(0,0,0,.05);
+	/*border-bottom-left-radius: 270px;
+	background-color: rgba(0,0,0,.05);*/
 	justify-content: flex-end;
 	width: 17.5%;
 }
 .slider img
 {
-	max-height: 250px;
-	width: 60%;
-	margin: auto;
+    margin: auto;
+    width: 85%;
+    height: auto;
+    max-height: 100px;
+    border-radius: 20px;
+}
+/*.row3
+{
+	width: 100%;
+	background-color: rgb(3, 8, 39);
+
+}*/
+.main_body
+{
+	width: 98%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	background-color: rgba(220,224,255,.95);
+	border-radius: 10px;
+	margin-top: 1%;
+	margin-left: 1%;
+	margin-right: 1%;
+	box-shadow: 0px 0px 12px black;
+}
+.r1,.r2,.r3
+{
+	width: 100%;
+	margin-top: 2%;
+	display: flex;
+	justify-content: space-around;
+}
+.b1
+{
+	width: 62%;
+	box-shadow: 0px 0px 1px;
+	height: 100px;
+}
+.b2
+{
+	width: 34%;
+	box-shadow: 0px 0px 1px;
+	height: 100px;
+}
+.b3,.b4
+{
+	width: 30%;
+	box-shadow: 0px 0px 1px;
+	height: 150px;
+}
+.b5
+{
+  	width: 100%;
+  	box-shadow: 0px 0px 1px;
+	height: 60px;
+}
+.b6
+{
+  	width: 100%;
+  	box-shadow: 0px 0px 1px;
+  	margin-top: 5px;
+	height: 85px;
+}
+.b7,.b8
+{
+	width: 100%;
+	box-shadow: 0px 0px 1px;
+	height: 72.5px;
+	margin-bottom: 5px;
+}
+.b9
+{
+	width: 34%;
+	box-shadow: 0px 0px 1px;
+	height: 150px;
+}
+.c1
+{
+	display: block;
+	width: 34%;
+}
+.c2
+{
+	display: block;
+	width: 62%;
+}
+.footer
+{
+	background-color: rgb(3, 8, 39);
+    box-shadow: 0px 0px 12px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    text-align: center;
+    margin-top: -1.5%;
+}
+h2
+{
+	font-size: 12px;
+	font-family: 'Titillium Web', sans-serif;
+	color: rgb(255,255,255);
+	text-shadow: 1px 1px 2px black;
 }
