--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
 body
 {
 	margin: 0px;
-	/*overflow-y: hidden;*/
-	
+	background-color: #efefef;
 }
 .row1
 {
@@ -27,23 +26,22 @@ div.row2
 {
     width: 100%;
     display: flex;
-    height: 125px;
-    background-color: rgba(0,0,0,.05);
+    height: 130px;
+    background-color: rgba(0,0,0,.075);
     box-shadow: 0px 0px 6px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 div.logoIEEE
 {
-	/*border-bottom-right-radius: 270px;
-	background-color: rgba(0,0,0,.05);*/
 	justify-content: flex-start;
 	width: 17.5%;
+	margin: auto;
 }
 .logoIEEE img
 {
-	margin-left: 20px;
-	margin-top: 10px;
+	margin-left: 10%;
+	margin-top: 7%;
 }
 div.gallery
 {
@@ -60,36 +58,29 @@ h1
 }
 div.logoSJB
 {
-	/*border-bottom-left-radius: 270px;
-	background-color: rgba(0,0,0,.05);*/
 	justify-content: flex-end;
 	width: 17.5%;
+	margin: auto;
 }
 .slider img
 {
     margin: auto;
-    width: 85%;
+    width: 90%;
     height: auto;
-    max-height: 100px;
+    max-height: 105px;
     border-radius: 20px;
 }
-/*.row3
-{
-	width: 100%;
-	background-color: rgb(3, 8, 39);
-
-}*/
 .main_body
 {
-	width: 98%;
+	width: 97%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 	background-color: rgba(220,224,255,.95);
 	border-radius: 10px;
-	margin-top: 1%;
-	margin-left: 1%;
-	margin-right: 1%;
+	margin-top: 2%;
+	margin-left: 1.5%;
+	margin-right: 1.5%;
 	box-shadow: 0px 0px 12px black;
 }
 .r1,.r2,.r3
@@ -153,14 +144,14 @@ div.logoSJB
 	display: block;
 	width: 62%;
 }
-.footer
+footer
 {
 	background-color: rgb(3, 8, 39);
     box-shadow: 0px 0px 12px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     text-align: center;
-    margin-top: -1.5%;
+    margin-top: -1%;
 }
 h2
 {
